# IT-job-offers-analyzer

./: .gitignore  CLAUDE.md  README.md  analyzer.py  cli.py  pyproject.toml  requirements.txt  scrapper.py
it_job_offers_analyzer/: __init__.py  analyzer.py  cli.py  scrapper.py
it_job_offers_analyzer/cli/: __init__.py  app.py  cancel.py  commands.py  completer.py  constants.py  display.py  parsing.py  scraping.py  state.py
tests/: conftest.py  test_analyzer.py  test_cli_app.py  test_cli_commands.py  test_cli_completer.py  test_cli_display.py  test_cli_parsing.py  test_cli_scraping.py  test_cli_state.py  test_scrapper.py
